[gd_scene format=3 uid="uid://mainmenu"]

[ext_resource type="Script" path="res://scripts/main/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.75, 0.3, 1)
theme_override_font_sizes/font_size = 72
text = "SPIREFALL"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 50)
text = "Play"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 50)
text = "Settings"

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 50)
text = "Credits"

[node name="CollectionButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 50)
disabled = true
text = "Collection (Coming Soon)"

[node name="LeaderboardsButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 50)
disabled = true
text = "Leaderboards (Coming Soon)"

[node name="SettingsOverlay" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsVBox" type="VBoxContainer" parent="SettingsOverlay"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SettingsTitle" type="Label" parent="SettingsOverlay/SettingsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Settings"
horizontal_alignment = 1

[node name="SettingsPlaceholder" type="Label" parent="SettingsOverlay/SettingsVBox"]
layout_mode = 2
text = "Settings coming soon..."
horizontal_alignment = 1

[node name="SettingsCloseButton" type="Button" parent="SettingsOverlay/SettingsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[node name="CreditsOverlay" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsVBox" type="VBoxContainer" parent="CreditsOverlay"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CreditsTitle" type="Label" parent="CreditsOverlay/CreditsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Credits"
horizontal_alignment = 1

[node name="CreditsScroll" type="ScrollContainer" parent="CreditsOverlay/CreditsVBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 280)
size_flags_vertical = 3

[node name="CreditsText" type="RichTextLabel" parent="CreditsOverlay/CreditsVBox/CreditsScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SPIREFALL

A classic tower defense game inspired by Element TD, Green TD, and Legion TD.

Developed with Godot Engine 4.6

Thank you for playing!"

[node name="CreditsCloseButton" type="Button" parent="CreditsOverlay/CreditsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"
